; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gcc/extr_tree-vect-transform.c_vect_finish_stmt_generation.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gcc/extr_tree-vect-transform.c_vect_finish_stmt_generation.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@BSI_SAME_STMT = common dso_local global i32 0, align 4
@REPORT_DETAILS = common dso_local global i32 0, align 4
@vect_dump = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [15 x i8] c"add new stmt: \00", align 1
@TDF_SLIM = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i64, i64, i32*)* @vect_finish_stmt_generation to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @vect_finish_stmt_generation(i64 %0, i64 %1, i32* %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32*, align 8
  store i64 %0, i64* %4, align 8
  store i64 %1, i64* %5, align 8
  store i32* %2, i32** %6, align 8
  %7 = load i32*, i32** %6, align 8
  %8 = load i64, i64* %5, align 8
  %9 = load i32, i32* @BSI_SAME_STMT, align 4
  %10 = call i32 @bsi_insert_before(i32* %7, i64 %8, i32 %9)
  %11 = load i32, i32* @REPORT_DETAILS, align 4
  %12 = call i64 @vect_print_dump_info(i32 %11)
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %21

14:                                               ; preds = %3
  %15 = load i32, i32* @vect_dump, align 4
  %16 = call i32 @fprintf(i32 %15, i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str, i64 0, i64 0))
  %17 = load i32, i32* @vect_dump, align 4
  %18 = load i64, i64* %5, align 8
  %19 = load i32, i32* @TDF_SLIM, align 4
  %20 = call i32 @print_generic_expr(i32 %17, i64 %18, i32 %19)
  br label %21

21:                                               ; preds = %14, %3
  %22 = load i64, i64* %4, align 8
  %23 = load i32*, i32** %6, align 8
  %24 = load i32, i32* %23, align 4
  %25 = call i64 @bsi_stmt(i32 %24)
  %26 = icmp eq i64 %22, %25
  %27 = zext i1 %26 to i32
  %28 = call i32 @gcc_assert(i32 %27)
  %29 = load i64, i64* %5, align 8
  %30 = load i64, i64* %4, align 8
  %31 = call i32 @EXPR_LOCUS(i64 %30)
  %32 = call i32 @SET_EXPR_LOCUS(i64 %29, i32 %31)
  ret void
}

declare dso_local i32 @bsi_insert_before(i32*, i64, i32) #1

declare dso_local i64 @vect_print_dump_info(i32) #1

declare dso_local i32 @fprintf(i32, i8*) #1

declare dso_local i32 @print_generic_expr(i32, i64, i32) #1

declare dso_local i32 @gcc_assert(i32) #1

declare dso_local i64 @bsi_stmt(i32) #1

declare dso_local i32 @SET_EXPR_LOCUS(i64, i32) #1

declare dso_local i32 @EXPR_LOCUS(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
